tests/specs/check/check_node_builtin_modules/mod.js.out
Check (tsc [WILDLINE])
TS2769 [ERROR]: No overload matches this call.
  The last overload gave the following error.
    Argument of type '123' is not assignable to parameter of type 'BufferEncoding | (ObjectEncodingOptions & { flag?: string | undefined; }) | null | undefined'.
const _data = fs.readFileSync("./node_builtin.js", 123);
                                                   ~~~
    at file://[WILDCARD]/mod.ts:2:52

TS4104 [ERROR]: The type 'readonly string[]' is 'readonly' and cannot be assigned to the mutable type 'number[]'.
const _testString: number[] = builtinModules;
      ~~~~~~~~~~~
    at file://[WILDCARD]/mod.ts:9:7

Found 2 errors.

error: Type checking failed.
